# mopsa

./: .gitattributes  .gitignore  0.readme.txt  CMakeLists.txt  README.md
DLD/: 10-267-10um.mat  10-267-12um.mat  10-267-1um.mat  10-267-5um.mat
calibration/: science-0.4um.mat  science-1um.mat
converted_geometry/: 90um.mat  ATriangle.mat  Circle-Re0.5.mat  CirclePostAtRe15.mat  DLD-triangle.mat  Diamond-Re2.mat  DiamondAtRe15.mat  DownturnedTriangleAtRe15.mat  Extended semi-circle.mat  HydrodynamicFilter.mat  LabChip.mat  Quarter Circle.mat  RBCs.mat  RightTriangle.mat  Square.mat  UpRightTriangle.mat  Upright triangle.mat  critical-part.mat  cross.mat  different-posts.mat  gravity-demo.mat  inertial.mat  pattern-unit.mat  platelets-RBCs.mat  science.mat  self-inertial.mat  unit.mat
data/: 90um-x.csv  90um-y.csv  DLD-triangle-y.csv  DLD_triangle-x.csv  HydrodynamicFilter-x.csv  HydrodynamicFilter-y.csv  cross-x.csv  cross-y.csv  science-x.csv  science-y.csv
design_geometry_plain/: DLD_triangle.txt
dxf/: 90um.bak  DLD-triangle2000.dxf  LabChip.bak  (+18 more)
main/: CMakeLists.txt  main.cpp
mopsa/: CMakeLists.txt  headerdef.hpp
mopsa/chip/: CMakeLists.txt  chip.cpp  chip.hpp  design.cpp  design.hpp  flow.cpp  flow.hpp
mopsa/geometry/: CMakeLists.txt  point.cpp  point.hpp  polygon.hpp
mopsa/logger/: CMakeLists.txt  debug.cpp  debug.hpp  def.hpp  logger.cpp  logger.hpp
mopsa/sim/: CMakeLists.txt  particle.cpp  particle.hpp  sim.cpp  sim.hpp  sim_flowgrid.cpp  sim_flowgrid.hpp
mopsa/util/: CMakeLists.txt  reader.cpp  reader.hpp  util_funcs.cpp  util_funcs.h
(+21 files in other folders)
